--- a/config.json
+++ b/config.json
@@ -86,12 +86,12 @@
       "name": "小猫咪资源"
     },
     "taopian": {
-      "api": "https://taopianapi.com/cjapi/mc10/vod/json.html",
-      "name": "淘片资源"
-    },
-    "taopian": {
       "api": "https://api.wujinapi.me/api.php/provide/vod",
       "name": "无尽资源"
+    },
+    "taopian": {
+      "api": "https://xsd.sdzyapi.com/api.php/provide/vod",
+      "name": "闪电资源"
     }
   }
 }
