--- a/config.json
+++ b/config.json
@@ -92,6 +92,10 @@
     "taopian": {
       "api": "https://xsd.sdzyapi.com/api.php/provide/vod",
       "name": "闪电资源"
+    },
+    "suoni": {
+      "api": "https://suoniapi.com/api.php/provide/vod",
+      "name": "索尼资源"
     }
   }
 }
